# Codex-Orchestrator

./: $log  ISSUES.md  README.md  pyproject.toml  test_log.txt  test_m0_01.py  test_m0_01.txt  test_prompt.md  test_ps.ps1
codexor/: __init__.py  __main__.py  cli.py  codex_runner.py  command.py  errors.py  github.py  issue_key.py  models.py  orchestrator.py  repo.py  reporting.py  signals.py  template.py
codexor/prompts/: close_milestone.md
docs/: ARCHITECTURE.md  REQUIREMENTS.md
docs/prompts/: TASK_PROMPT_TEMPLATE.md
mock_cli/: mock_agent.bat  mock_agent.py  mock_gh.bat  mock_gh.py
tests/: test_cli.py  test_codex_runner_tail.py  test_github.py  test_issue_key.py  test_orchestrator.py  test_repo.py  test_reporting.py  test_signals.py  test_template.py
