[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codexor"
version = "0.1.0"
description = "Milestone-based Codex orchestration for GitHub issues."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codexor = "codexor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
